Optimise: create additional indices as suggested by Gosta. I've tested with mysql, and confirm the speed increases. Can users of sqlite and psql please test this as well, thanks.

BUG: 142999
CCMAIL: amarok@kde.org

svn path=/branches/stable/extragear/multimedia/amarok/; revision=678474